# propel

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/models/: Task.py  TaskManager.py  __init__.py  task.py  task_manager.py
src/task_manager/: __init__.py  manager.py
src/task_manager/configs/: logger_config.py
src/task_manager/constants/: codes.py  messages.py  types.py  vars.py
src/task_manager/models/: task.py
src/task_manager/utils/: exceptions.py
src/utils/: exceptions.py
test/: TaskManager_test.py  Task_test.py  conftest.py  test_manager.py
test/test_configs/: test_logger_config.py
test/test_constants/: test_codes.py  test_messages.py  test_types.py  test_vars.py
test/test_models/: TaskManager_test.py  Task_test.py  test_Task.py  test_TaskManager.py  test_task.py  test_task_manager.py  test_task_t.py
test/test_utils/: test_exceptions.py
tests/test_models/: test_task_model.py
