[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "propel"
version = "1.0.0"
description = "Propel is a Python library for managing tasks through a well-defined lifecycle."
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Diego Libonati", email = "diego.libonati1998@gmail.com" },
]
keywords = ["task", "task-manager", "library", "python", "poo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pre-commit==4.3.0",
    "pip-audit==2.7.3",
    "ruff==0.11.12",
]
test = [
    "pytest==9.0.3",
    "pytest-env==1.1.5",
    "pytest-cov==4.1.0",
    "pytest-timeout==2.3.1",
    "pytest-xdist==3.5.0",
]

[project.scripts]
propel-demo = "examples.demo:main"

[project.urls]
Homepage = "https://github.com/DiegoLibonati/TaskManager-Library-Python"
Repository = "https://github.com/DiegoLibonati/TaskManager-Library-Python"
Issues = "https://github.com/DiegoLibonati/TaskManager-Library-Python/issues"
Changelog = "https://github.com/DiegoLibonati/TaskManager-Library-Python/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["propel*"]

[tool.setuptools.package-data]
propel = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
log_cli = true
log_cli_level = "WARNING"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.ruff]
line-length = 160
exclude = [".git", "__pycache__", "env", "venv", ".venv", "migrations", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF", "C4"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
